--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <!-- Fonts -->
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script type="module" src="http://[::1]:5173/@vite/client"></script>
-    <link rel="stylesheet" href="http://[::1]:5173/resources/sass/app.scss" />
-    <script type="module" src="http://[::1]:5173/resources/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- <link rel="stylesheet" href="http://[::1]:5173/resources/sass/app.scss" />
+    <script type="module" src="http://[::1]:5173/resources/js/app.js"></script> -->
     <!-- Livewire Styles -->
     <style>
         [wire\:loading],
